# toksqz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README_CN.md  dashboard.html
.github/workflows/: release.yml
assets/: all_filters.json  caveman_rules.json  caveman_rules_en.json
npm/: README.md  package.json
npm/scripts/: postinstall.js
packaging/homebrew/: README.md  generate_formula.py
src/: main.rs  proxy.rs
src/compression/: cache.rs  caveman.rs  command_detector.rs  dedup.rs  filter.rs  grouping.rs  line_filter.rs  mod.rs  stats.rs  truncate.rs
src/proxy/: anthropic.rs  gemini.rs  hint.rs  mod.rs  openai_chat.rs  responses.rs  shared.rs
tools/session-audit/: Cargo.toml
tools/session-audit/src/: session_cmd_audit.rs  session_full_audit.rs
