[package]
name = "toksqz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight Rust proxy for LLM prompt compression (RTK + Caveman)"
repository = "https://github.com/baicai-1145/toksqz"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
