[package]
name = "toksqz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight Rust proxy for LLM prompt compression (RTK + Caveman)"
repository = "https://github.com/baicai-1145/toksqz"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "signal"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring"] }
rustls = { version = "0.23", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
futures-util = "0.3"
lru = "0.12"
parking_lot = "0.12"

[dev-dependencies]
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
